<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" 
    android:gravity="center_horizontal">
    <RelativeLayout 
        android:id="@+id/regist_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg_blue">
        <Button
            android:id="@+id/regist_reback_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login_back"
            android:textSize="14sp"
            android:textColor="#fff"
            android:background="@drawable/title_btn_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/login_regist"
           />
        
    </RelativeLayout>
	<EditText 
	    android:id="@+id/login_user_edit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/regist_top_layout"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:singleLine="true"
	    android:background="@drawable/login_editbox"
	    android:hint="@string/regist_username_hint"/>
	<EditText 
	    android:id="@+id/login_passwd_edit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/login_user_edit"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@drawable/login_editbox"
	    android:password="true"
	    android:singleLine="true"
	    android:hint="@string/regist_passwd_hint"/>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/login_passwd_edit"
	    >
	     <Button
	        android:id="@+id/regist_btn"
	        android:layout_width="190dp"
	        android:layout_height="40dp"
	        android:layout_centerInParent="true"
	        android:text="@string/login_regist"
	        android:background="@drawable/btn_style_green"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        />
	</RelativeLayout>
</RelativeLayout>